# shabu

./: .gitignore  Dockerfile  README.md  setup.cfg  shabu.json
.github/workflows/: test.yml
shabu/: __main__.py  envfile.py  gitapi.py  shadb.py
