[metadata]
name = shabu
version = 0.0.1
description = build, version tagging + push manager for docker
author = Abe Winter
author_email = awinter.public@gmail.com

[options]
packages = shabu
install_requires =

[options.entry_points]
console_scripts =
  shabu = shabu.__main__:main

[options.extras_require]
# todo: tests_require when supported
test =
  pylint>=2.14.2
